# magicsquare

./: .gitignore  main.py  pyproject.toml
data/: data1.txt
magicsquare/: __init__.py  main.py
