[tool.poetry]
name = "magicsquare"
version = "0.1.0"
description = ""
authors = ["Dushyant Kumar <dushyant.kumar@gmail.com>"]
readme = "README.md"

[project.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"

